k8s/iterlaw/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synthesis-redis
  namespace: iterlaw-ai
spec:
  type: ClusterIP
  selector:
    app: synthesis-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
